--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public --no-clear",
+    "start": "sirv public --no-clear --single",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "prepare": "npm run smui-theme-light && npm run smui-theme-dark",
     "smui-theme-light": "smui-theme compile public/build/smui.css -i src/theme",
@@ -40,12 +40,17 @@
     "svelte": "^3.0.0",
     "svelte-check": "^2.0.0",
     "svelte-preprocess": "^4.0.0",
+    "tinro": "^0.6.12",
     "tslib": "^2.0.0",
     "typescript": "^4.0.0"
   },
   "dependencies": {
     "sirv-cli": "^1.0.0",
     "svelte-icons-pack": "^1.4.6",
+    "svelte-lazy": "^1.1.0",
     "svelte-media-query": "^1.1.2"
+  },
+  "prettier": {
+    "svelteIndentScriptAndStyle": true
   }
 }
