--- a/package.json
+++ b/package.json
@@ -14,38 +14,41 @@
     "deploy": "gh-pages -d public"
   },
   "devDependencies": {
+    "@material/theme": "^13.0.0",
     "@material/typography": "^13.0.0",
-    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^11.0.0",
-    "@rollup/plugin-typescript": "^8.0.0",
-    "@smui/button": "^5.0.0",
-    "@smui/card": "^5.0.0",
-    "@smui/drawer": "^5.0.0",
-    "@smui/fab": "^5.0.0",
-    "@smui/icon-button": "^5.0.0",
-    "@smui/layout-grid": "^5.0.0",
-    "@smui/list": "^5.0.0",
-    "@smui/paper": "^5.0.0",
-    "@smui/segmented-button": "^5.0.0",
-    "@tsconfig/svelte": "^2.0.0",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-typescript": "^8.3.0",
+    "@smui/button": "^6.0.0-beta.13",
+    "@smui/card": "^6.0.0-beta.13",
+    "@smui/chips": "^6.0.0-beta.13",
+    "@smui/dialog": "^6.0.0-beta.13",
+    "@smui/drawer": "^6.0.0-beta.13",
+    "@smui/fab": "^6.0.0-beta.13",
+    "@smui/icon-button": "^6.0.0-beta.13",
+    "@smui/layout-grid": "^6.0.0-beta.13",
+    "@smui/list": "^6.0.0-beta.13",
+    "@smui/paper": "^6.0.0-beta.13",
+    "@smui/segmented-button": "^6.0.0-beta.13",
+    "@tsconfig/svelte": "^3.0.0",
     "gh-pages": "^3.2.3",
-    "rollup": "^2.3.4",
+    "rollup": "^2.67.2",
     "rollup-plugin-css-only": "^3.1.0",
-    "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-svelte": "^7.0.0",
-    "rollup-plugin-terser": "^7.0.0",
-    "sass": "^1.43.4",
+    "rollup-plugin-livereload": "^2.0.5",
+    "rollup-plugin-svelte": "^7.1.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "sass": "^1.49.7",
     "smui-theme": "^5.0.0",
-    "svelte": "^3.0.0",
-    "svelte-check": "^2.0.0",
-    "svelte-preprocess": "^4.0.0",
+    "svelte": "^3.46.4",
+    "svelte-check": "^2.4.3",
+    "svelte-preprocess": "^4.10.3",
     "tinro": "^0.6.12",
-    "tslib": "^2.0.0",
-    "typescript": "^4.0.0"
+    "tslib": "^2.3.1",
+    "typescript": "^4.5.5"
   },
   "dependencies": {
-    "sirv-cli": "^1.0.0",
+    "sirv-cli": "^2.0.2",
     "svelte-icons-pack": "^1.4.6",
     "svelte-lazy": "^1.1.0",
     "svelte-media-query": "^1.1.2"
