--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,24 @@
-/node_modules/
-/public/build/
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-.DS_Store
+node_modules
+dist
+dist-ssr
+*.local
 
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
 .idea
 .DS_Store
-.nyc_output
-.vscode
-node_modules
-*.map
-/src/compiler/compile/internal_exports.ts
-/compiler.d.ts
-/compiler.*js
-/index.*js
-/ssr.*js
-/internal
-/store
-/easing
-/motion
-/transition
-/animate
-/scratch/
-/coverage/
-/coverage.lcov
-/test/*/samples/_
-/yarn-error.log
-_actual*.*
-_output
-/types
-
-/site/.svelte-kit/
-/site/build/
-/site/.env
-/site/static/svelte-app.json
-/site/static/contributors.jpg
-/site/static/donors.jpg
-/site/static/workers/
-/site/scripts/svelte-app/
-/site/src/routes/_contributors.js
-/site/src/routes/_donors.js
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
