--- a/package.json
+++ b/package.json
@@ -1,59 +1,34 @@
 {
-  "name": "svelte-app",
-  "version": "1.0.0",
+  "name": "lassik-2.0",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "start": "sirv public --no-clear --single",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
-    "prepare": "npm run smui-theme-light && npm run smui-theme-dark",
-    "smui-theme-light": "smui-theme compile public/build/smui.css -i src/theme",
-    "smui-theme-dark": "smui-theme compile public/build/smui-dark.css -i src/theme/dark",
     "predeploy": "yarn build",
     "deploy": "gh-pages -d public"
   },
   "devDependencies": {
-    "@material/theme": "^13.0.0",
-    "@material/typography": "^13.0.0",
-    "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "@rollup/plugin-typescript": "^8.3.0",
-    "@smui/button": "^6.0.0-beta.13",
-    "@smui/card": "^6.0.0-beta.13",
-    "@smui/chips": "^6.0.0-beta.13",
-    "@smui/dialog": "^6.0.0-beta.13",
-    "@smui/drawer": "^6.0.0-beta.13",
-    "@smui/fab": "^6.0.0-beta.13",
-    "@smui/icon-button": "^6.0.0-beta.13",
-    "@smui/layout-grid": "^6.0.0-beta.13",
-    "@smui/list": "^6.0.0-beta.13",
-    "@smui/paper": "^6.0.0-beta.13",
-    "@smui/segmented-button": "^6.0.0-beta.13",
+    "@sveltejs/vite-plugin-svelte": "^1.1.0",
     "@tsconfig/svelte": "^3.0.0",
-    "gh-pages": "^3.2.3",
-    "rollup": "^2.67.2",
-    "rollup-plugin-css-only": "^3.1.0",
-    "rollup-plugin-livereload": "^2.0.5",
-    "rollup-plugin-svelte": "^7.1.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "sass": "^1.49.7",
-    "smui-theme": "^5.0.0",
-    "svelte": "^3.46.4",
-    "svelte-check": "^2.4.3",
-    "svelte-preprocess": "^4.10.3",
-    "tinro": "^0.6.12",
-    "tslib": "^2.3.1",
-    "typescript": "^4.5.5"
+    "autoprefixer": "^10.4.7",
+    "daisyui": "^2.42.1",
+    "gh-pages": "^4.0.0",
+    "postcss": "^8.4.14",
+    "postcss-load-config": "^4.0.1",
+    "prettier": "^2.8.0",
+    "svelte": "^3.52.0",
+    "svelte-check": "^2.9.2",
+    "svelte-preprocess": "^4.10.7",
+    "tailwindcss": "^3.1.5",
+    "tslib": "^2.4.0",
+    "typescript": "^4.6.4",
+    "vite": "^3.2.3"
   },
   "dependencies": {
-    "sirv-cli": "^2.0.2",
-    "svelte-icons-pack": "^1.4.6",
-    "svelte-lazy": "^1.1.0",
-    "svelte-media-query": "^1.1.2"
-  },
-  "prettier": {
-    "svelteIndentScriptAndStyle": true
+    "svelte-icons-pack": "^2.0.0"
   }
 }
